
1.22 - ?
	- Inverted vote graph
	- Relation graph image maps are now stored in the DB
	- Properly fixed the command synchronisation issues with Multi
	- Fixed display of wrong ID in the screenshot diff
	- Fixed bug with the infinite thumbnail generation message when the server
	  doesn't respond within one second.
	- Rewrote VNDB::Util::DB::sqlprint to use server-side prepared statements

1.21 - 2008-08-16 (r90)
	- Added !vn and !uptime commands to Multi::IRC
	- Added realtime IRC notifications for actions on the site
	- Added screenshots to VNs
	- Rewrote Multi::Image
	- Renamed the 'anime check' command to 'anime' for consistency
	- Moved to PostgreSQL's boolean data type to store boolean data

1.20 - 2008-08-06 (r79)
	- Admins can change someone's username
	- Fixed the automatic relogin after changing password
	- Added lock indicator when browsing threads on a tag
	- Re-added the vote stats to VN pages
	- Searching for 'Chinese' doesn't select 'NES'
	- Place/time category order on VN pages is now consistent
	- Admins can delete users from the DB
	- Added small NSFW indication for users who have disabled the warning
	- Added noindex tag to iid-ttag browser
	- Replaced last poster with age of last post on home page
	- Added release list feature and removed the old VNList
	- Merged user vote list into the new release list (and removed 'hide my
	  votes' option)
	- Merged Votes.pm into VNLists.pm
	- Auto-expand edit summary form when adding a release
	- Added wishlist

1.19 - 2008-07-08 (r62)
	- Integrated discussion board
	- Colored diff for alies field
	- 'ttabs' for user entries
	- Removed the rating system

1.18 - 2008-07-02 (r51)
	- Releases, producers and visual novel items can't be fully deleted anymore
	- Hidden vote and vnlist items from the 'recent' lists on VN stat pages for
	  users who don't want that to be seen
	- Added warnings for empty edit summary and extreme votes
	- Changed earliest release date to 1980
	- Added NES and MSX platforms